adjust chorus effect, fix overlapping notes in musicxml

--- a/toneMaker/stylesheet.css
+++ b/toneMaker/stylesheet.css
@@ -123,6 +123,16 @@
 	}
 
 /*** keyboard ***/
+	#keyboard-behind {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: calc(var(--keyboard-height) + var(--gap-size));
+		z-index: 1;
+		background: var(--dark-gray);
+	}
+
 	#keyboard {
 		position: absolute;
 		bottom: 0;
@@ -132,6 +142,7 @@
 		border-radius: var(--border-radius);
 		margin: var(--gap-size);
 		background: var(--dark-gray);
+		z-index: 2;
 	}
 
 	/* shift */
@@ -156,6 +167,7 @@
 			cursor: pointer;
 			transition: var(--transition-time);
 			text-align: center;
+			z-index: 3;
 		}
 
 		#keyboard-octave-down:hover, #keyboard-octave-up:hover, #keyboard-octave-down:focus, #keyboard-octave-up:focus {
@@ -1404,44 +1416,6 @@
 			min-width: calc(var(--large-font-size) + 2 * var(--gap-size));
 		}
 
-	/* chorus */
-		#tool-effects-chorus {
-			position: relative;
-			top: 0;
-			left: 0;
-			margin-bottom: var(--gap-size);
-		}
-
-		#tool-effects-chorus .input {
-			position: relative;
-			height: calc(var(--large-font-size) + 2 * var(--gap-size));
-			width: calc(4 * var(--large-font-size) + var(--gap-size));	
-			border-radius: var(--border-radius);
-			font-size: var(--large-font-size);
-			padding: var(--gap-size);
-			box-sizing: border-box;
-			margin-right: var(--gap-size);
-		}
-
-		#tool-effects-chorus .track {
-			vertical-align: top;
-			display: inline-block;
-			position: relative;
-			top: 0;
-			left: 0;
-			width: calc(100% - (4 * var(--large-font-size) + 2 * var(--gap-size)));
-			height: calc(var(--large-font-size) + 2 * var(--gap-size));
-			font-size: var(--large-font-size);
-		}
-
-		#tool-effects-chorus .bar {
-			position: relative;
-			left: 50%;
-			transform: translateX(-50%);
-			height: 100%;
-			min-width: calc(var(--large-font-size) + 2 * var(--gap-size));
-		}
-
 	/* panning */
 		#tool-effects-panning {
 			position: relative;
@@ -1493,6 +1467,46 @@
 			border-radius: var(--border-radius);
 			z-index: -1;
 			pointer-events: none;
+		}
+
+	/* chorus */
+		#tool-effects-chorus {
+			position: relative;
+			top: 0;
+			left: 0;
+			margin-bottom: var(--gap-size);
+		}
+
+		#tool-effects-chorus .input {
+			position: relative;
+			display: block;
+			height: calc(var(--large-font-size) + 2 * var(--gap-size));
+			width: calc(4 * var(--large-font-size) + var(--gap-size));
+			border-radius: var(--border-radius);
+			font-size: var(--large-font-size);
+			padding: var(--gap-size);
+			box-sizing: border-box;
+			margin-right: var(--gap-size);
+		}
+
+		#tool-effects-chorus .input:first-child {
+			margin-bottom: var(--gap-size);
+		}
+
+		#tool-effects-chorus .track {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: calc(100% - (4 * var(--large-font-size) + 2 * var(--gap-size)));
+			height: calc(var(--large-font-size) * 2 + 5 * var(--gap-size));
+			font-size: var(--large-font-size);
+		}
+
+		#tool-effects-chorus .bar {
+			position: relative;
+			min-height: calc(var(--large-font-size) + 2 * var(--gap-size));
+			min-width: calc(var(--large-font-size) * 2 + 6 * var(--gap-size));
+			border-radius: calc(var(--large-font-size) * 2 + 5 * var(--gap-size));
 		}
 
 /*** tool-compressor ***/
